# MPMDSL

./: .gitignore  README.md
docs/: 01-概述.md  02-核心概念.md  03-快速开始.md  04-API参考.md  05-问题建模.md  06-代码生成.md  07-示例手册.md  08-最佳实践.md  09-故障排除.md  README.md
docs-en/: 01-Overview.md  02-Core-Concepts.md  03-Quick-Start.md  04-API-Reference.md  05-Problem-Modeling.md  06-Code-Generation.md  07-Examples.md  08-Best-Practices.md  09-Troubleshooting.md  README.md
ormdsl-ast/src/: AbstractAlgebraicAST.scala  Main.scala
ormdsl-cuopt/: ARCHITECTURE.md  BUILD.md  CMakeLists.txt  Dockerfile  README.md  check_vrp.py  debug_milp.py  docker-compose.yml
ormdsl-cuopt/docs/: CUOPT_REAL_GPU_FIX_PLAN.md
ormdsl-cuopt/examples/: Examples.md
ormdsl-cuopt/src/: CUOPTCodeGenerator.scala  IR2CUOPT.scala  LPGenerator.scala  MILPGenerator.scala  PythonAPI.scala  RoutingGenerator.scala  cuopt_solver.py  main.scala  torch_gpu_solver.py
ormdsl-cuopt/tests/: BenchmarkTest.scala  benchmark_test.py  docker_test_gpu.py  lp_scale_test.py  run_docker_test.py
ormdsl-gurobi/: README.md
ormdsl-gurobi/docs/: 01-安装指南.md  README.md
ormdsl-gurobi/examples/: facility_location_example.py  knapsack_example.py
ormdsl-gurobi/src/: AST2Gurobi.scala  CodeGenerator.scala  GurobiModel.scala  IR2Gurobi.scala  build.sbt  test_gurobi.scala
ormdsl-intepreter/: build.sbt  compile.bat
ormdsl-intepreter/docs/: DSL_AST_vs_IR_Comparison.md  DSL_AST_vs_IR_Comparison_EN.md
ormdsl-intepreter/src/: AST2AMPL.scala  AST2IR.scala  AST2Tex.scala  AbsoluteValuesClause.scala  AbstractSyntax.scala  BinaryVariable.scala  Clause.scala  ContinuousVariable.scala  DecisionVariable.scala  DisjunctionClause.scala  Equality.scala  Equation.scala  Expression.scala  IR2AMPL.scala  IR2Tex.scala  IRutils.scala  ImplictConst.scala  IntegerVariable.scala  IntermediateRepresentation.scala  LogicClause.scala  LogicalAndClause.scala  LogicalNotClause.scala  LogicalOrClause.scala  Main.scala  MaximalValuesClause.scala  MinOrMax.scala  MinimalValuesClause.scala  MinimumActivityLevelClause.scala  ModelPrinter.scala  ObjectiveFunction.scala  OrderedAlternativesClause.scala  PriceBreakClause.scala  Problem.scala  ProductValuesClause.scala  Sugar.scala  SugarTest.scala  ast grammar.txt
ormdsl-js/: ast.js  sugar.js
ormdsl-new/src/: AST.scala  pmedian.scala
ormdsl-oop/src/: AbstractFunctionalAST.scala
ormdsl-py/: ast.py  sugar.py
ormdsl-syn-dev/: design concept.txt  electrical_power_in_aimms.txt  gpu_imple.txt  sample_berth.py  sample_knapsack.js  sample_p_median.py  sample_tsp.py
